@@ -1,4 +1,5 @@
 version 1.2
+- deducorrect object gains 'call' attribute.
 - Update vignette describes new 'editset' functionality
 - deduImpute accepts 'editset'. Imputations causing new violations are reverted afterwards
 - correctRounding, correctTypos, correctSigns now S3 generic and accept 'editset'. Corrections causing new violations are reverted afterwards.
